PyMaker/datas/object2/RawHTML/i5601/Python_DOC_referPages.python-error-syntaxerror-invalid-syntax-how-to-solve-this.txt
<div class="post-text" itemprop="text">
<pre><code>    #create a mapping of state to abbreviation
states = [
        'Oregon': 'OR',
        'Florida': 'FL',
        'California': 'CA',
        'New York': 'NY',
        'Michigan': 'MI'
]

# create a basic set of states and some cities in them
cities = [
        'CA': 'San Francisco',
        'MI': 'Detroit',
        'FL': 'Jacksonville'
]
,
#add someor more cities
cities['NY'] = 'New York'
cities['OR'] = 'Portland'

#rprint out some citis
print '-' * 10
print "NY state has: ", cities['NY']
print "OR state has: ", cities['OR']

#print some states
print '-' * 10
print "Michigan's abbreviation is: ", states['Michigan']
print "Florida's abbreviation is: ", states['Florida']
</code></pre>
<p>Stored this code in ex39_dictionaries.py. When I execute it, I see below error. Whats wrong with this code ?</p>
<p>File "ex39_dictionaries.py", line 3
    'Oregon': 'OR',
            ^
SyntaxError: invalid syntax</p>
</div>
<div class="post-text" itemprop="text">
<pre><code>states = [
    'Oregon': 'OR',
    'Florida': 'FL',
    'California': 'CA',
    'New York': 'NY',
    'Michigan': 'MI'
]
</code></pre>
<p>Using square brackets, this is an attempt to define a <em>list</em>, and list items must be separated with commas. However, it seems that you want to create a <em>dictionary</em> here (i.e. a collection of <code>key: value</code> pairs), and for that braces (curly brackets) must be used:</p>
<pre><code>states = {
    'Oregon': 'OR',
    'Florida': 'FL',
    'California': 'CA',
    'New York': 'NY',
    'Michigan': 'MI'
}
</code></pre>
</div>
<span class="comment-copy">If the code's purpose is to throw a syntax error, then it's working perfectly. What do you think the code is supposed to do?</span>
<span class="comment-copy">And dictionaries are defined with curly braces, not brackets.</span>
<span class="comment-copy">Thanks @DavyM, using curly braces solved the error.</span>
<span class="comment-copy"><a href="https://docs.python.org/3/tutorial/datastructures.html" rel="nofollow noreferrer">docs.python.org/3/tutorial/datastructures.html</a> Read dictionaries section.</span>
<span class="comment-copy"><i>Angular brackets</i> would usually refer to something like <code>&lt;...&gt;</code>; I think you meant <i>square brackets</i>.</span>
<span class="comment-copy">Right... I'm not a native speaker. Updated, thanks!</span>
